--- a/app/views/patron/index.html.haml
+++ b/app/views/patron/index.html.haml
@@ -1,30 +1,4 @@
 %h3 My Account
 
-%h4 Currently On Loan:
-
-- if @patron.loans.empty?
-  You currently have nothing on loan.
-
-- else
-  %table.table.table-striped
-    %tr
-      %th Title
-      %th Due Date
-      %th Item Type
-      %th Status
-      %th Renew?
-    = form_tag patron_index_path do 
-      - @patron.loans.each do |loan|
-        %tr{:class => determine_loan_row_class(loan)}
-          %td= loan.title
-          %td= loan.due_date.to_formatted_s(:short)
-          %td= loan.item_type
-          %td= loan.status_text
-          %td
-            - if loan.can_renew
-              = check_box_tag "loans_renew[]", "#{loan.db_key}%7C#{loan.item_id}", loan.db_key.in?(params['loans_renew'])
-
-      - unless @patron.loans.empty?
-        %tr
-          %td{:colspan => 4}
-          %td= submit_tag "Renew"
+= render :partial => "loans"
+= render :partial => 'fines'
