--- a/app/views/patron/index.html.haml
+++ b/app/views/patron/index.html.haml
@@ -1,4 +1,6 @@
 %h3 My Account
 
+= render :partial => "blocks"
 = render :partial => "loans"
 = render :partial => 'fines'
+= render :partial => 'holds'
