fix holding display bug with recall/hold

--- a/app/views/patron/_request_subform.html.haml
+++ b/app/views/patron/_request_subform.html.haml
@@ -18,7 +18,7 @@
       - locations = request_data['pickup_locations']
       - selected = locations.detect { |l| l[:default] == "Y"}
       - selected = selected ? selected[:code] : "572"
-      = select_tag control_name, options_for_select(locations.collect{ |i| [i[:name], i[:code]]} )
+      = select_tag control_name, options_for_select(locations.collect{ |i| [i[:name], i[:code]]}, selected )
 
    
   .control-group
