more tests for email and move form to views/application

--- a/app/views/catalog/email.html.erb
+++ b/app/views/catalog/email.html.erb
@@ -2,4 +2,4 @@
   <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
   <h1>Share selected item(s) via email</h1>
 </div>
-<%= render 'email_form' %>
+<%= render 'application/email_form' %>
