--- a/app/views/_formats/ac/_catalog_list.html.haml
+++ b/app/views/_formats/ac/_catalog_list.html.haml
@@ -17,7 +17,7 @@
         - fedora_id = document['id'].listify.first
         -# NEXT-1012 - use handle for item link in AC records
         -# = link_to document.get('title_display'), "http://academiccommons.columbia.edu/catalog/#{fedora_id}"
-        = link_to ac_item_link(document)  #document.get('title_display'), document['handle']
+        = link_to ac_item_link(document)
 
 
   / main container for doc partial view
