--- a/app/views/catalog/_selections_widget.html.haml
+++ b/app/views/catalog/_selections_widget.html.haml
@@ -29,7 +29,7 @@
     %b.caret
 
   %ul.dropdown-menu
-    %li= link_to "Send to Email", email_path(), {:id => "emailLink", :name => "email", :class => "lightboxLink", :onclick => "return appendSelectedToURL(this);"}
+    %li= email_dropdown_link(email_path())
     %li= link_to "Export to EndNote", endnote_catalog_path(:format => 'endnote'), {:id => "endnoteLink", :onclick => "return appendSelectedToURL(this);"}
 
     -# %li.nav-divider
