--- a/app/views/catalog/_advanced_search.html.haml
+++ b/app/views/catalog/_advanced_search.html.haml
@@ -14,9 +14,12 @@
       %button.btn.advanced_search_button.btn-primary{:name => "commit", :type => "submit", :value => "Search"}
         %span.glyphicon.glyphicon-search.icon-white
         %span.hidden-xs Search
-      =link_to "Basic Search", "#", class: "btn btn-link advanced_search_toggle"
+      =link_to "Basic Search", "#", class: "btn btn-link advanced_search_toggle",
+                                    'data-ga-category' => ga_category_for_results_list,
+                                    'data-ga-action' => "Search Toggle Click",
+                                    'data-ga-label' => "Switch to Basic"
 
-    = hidden_field_tag 'search_field', 'advanced'
+      = hidden_field_tag 'search_field', 'advanced'
 
     - (1..5).each do |i|
       .advanced_search_row.form_group.row
