add ga to item view links for other formats

--- a/app/views/_formats/newspaper/_catalog_show.html.haml
+++ b/app/views/_formats/newspaper/_catalog_show.html.haml
@@ -13,11 +13,11 @@
   = add_row("Manufactured", display_marc_field(marc, 'publish_manufacture'))
   = add_row("Copyright", display_marc_field(marc, 'publish_copyright'))
   = add_row("Issues Published", display_marc_field(marc, 'issues_published'))
-  = add_row("Continues", generate_value_links(display_marc_field(marc, 'continues'), :all))
-  = add_row("Continues in part", generate_value_links(display_marc_field(marc, 'continues_in_part'), :all))
-  = add_row("Supersedes", generate_value_links(display_marc_field(marc, 'supersedes'), :all))
-  = add_row("Supersedes in part", generate_value_links(display_marc_field(marc, 'supersedes_in_part'), :all))
-  = add_row("Formed by the union of", generate_value_links(display_marc_field(marc, 'formed_by_the_union_of'), :all))
+  = add_marc_row("Continues", display_marc_field(marc, 'continues'), :all)
+  = add_marc_row("Continues in part", display_marc_field(marc, 'continues_in_part'), :all)
+  = add_marc_row("Supersedes", display_marc_field(marc, 'supersedes'), :all)
+  = add_marc_row("Supersedes in part", display_marc_field(marc, 'supersedes_in_part'), :all)
+  = add_marc_row("Formed by the union of", display_marc_field(marc, 'formed_by_the_union_of'), :all)
   = add_row("Absorbed", generate_value_links(display_marc_field(marc, 'absorbed'), :all))
   = add_row("Absorbed in part", generate_value_links(display_marc_field(marc, 'absorbed_in_part'), :all))
   = add_row("Separated from", generate_value_links(display_marc_field(marc, 'separated_from'), :all))
