--- a/app/views/_formats/serial/_catalog_show.html.haml
+++ b/app/views/_formats/serial/_catalog_show.html.haml
@@ -12,30 +12,30 @@
   = add_row("Manufactured", display_marc_field(marc, 'publish_manufacture'))
   = add_row("Copyright", display_marc_field(marc, 'publish_copyright'))
   = add_row("Issues Published", display_marc_field(marc, 'issues_published'))
-  = add_row("Continues", generate_value_links(display_marc_field(marc, 'continues'), :all))
-  = add_row("Continues in part", generate_value_links(display_marc_field(marc, 'continues_in_part'), :all))
-  = add_row("Supersedes", generate_value_links(display_marc_field(marc, 'supersedes'), :all))
-  = add_row("Supersedes in part", generate_value_links(display_marc_field(marc, 'supersedes_in_part'), :all))
-  = add_row("Formed by the union of", generate_value_links(display_marc_field(marc, 'formed_by_the_union_of'), :all))
+  = add_marc_row("Continues", display_marc_field(marc, 'continues'), :all)
+  = add_marc_row("Continues in part", display_marc_field(marc, 'continues_in_part'), :all)
+  = add_marc_row("Supersedes", display_marc_field(marc, 'supersedes'), :all)
+  = add_marc_row("Supersedes in part", display_marc_field(marc, 'supersedes_in_part'), :all)
+  = add_marc_row("Formed by the union of", display_marc_field(marc, 'formed_by_the_union_of'), :all)
   = add_marc_row("Absorbed", display_marc_field(marc, 'absorbed'), :all)
-  = add_row("Absorbed in part", generate_value_links(display_marc_field(marc, 'absorbed_in_part'), :all))
-  = add_row("Separated from", generate_value_links(display_marc_field(marc, 'separated_from'), :all))
-  = add_row("Continued by", generate_value_links(display_marc_field(marc, 'continued_by'), :all))
-  = add_row("Continued in part by", generate_value_links(display_marc_field(marc, 'continued_in_part_by'), :all))
-  = add_row("Superseded by", generate_value_links(display_marc_field(marc, 'superseded_by'), :all))
-  = add_row("Superseded in part by", generate_value_links(display_marc_field(marc, 'superseded_in_part_by'), :all))
-  = add_row("Absorbed by", generate_value_links(display_marc_field(marc, 'absorbed_by'), :all))
-  = add_row("Absorbed in part by", generate_value_links(display_marc_field(marc, 'absorbed_in_part_by'), :all))
-  = add_row("Split into", generate_value_links(display_marc_field(marc, 'split_into'), :all))
-  = add_row("Merged with, to form", generate_value_links(display_marc_field(marc, 'merged_with_to_form'), :all))
-  = add_row("Changed back to", generate_value_links(display_marc_field(marc, 'changed_back_to'), :all))
+  = add_marc_row("Absorbed in part", display_marc_field(marc, 'absorbed_in_part'), :all)
+  = add_marc_row("Separated from", display_marc_field(marc, 'separated_from'), :all)
+  = add_marc_row("Continued by", display_marc_field(marc, 'continued_by'), :all)
+  = add_marc_row("Continued in part by", display_marc_field(marc, 'continued_in_part_by'), :all)
+  = add_marc_row("Superseded by", display_marc_field(marc, 'superseded_by'), :all)
+  = add_marc_row("Superseded in part by", display_marc_field(marc, 'superseded_in_part_by'), :all)
+  = add_marc_row("Absorbed by", display_marc_field(marc, 'absorbed_by'), :all)
+  = add_marc_row("Absorbed in part by", display_marc_field(marc, 'absorbed_in_part_by'), :all)
+  = add_marc_row("Split into", display_marc_field(marc, 'split_into'), :all)
+  = add_marc_row("Merged with, to form", display_marc_field(marc, 'merged_with_to_form'), :all)
+  = add_marc_row("Changed back to", display_marc_field(marc, 'changed_back_to'), :all)
   = add_row("Description", display_marc_field(marc, 'description'))
   = add_row("Summary", display_marc_field(marc, 'summary'))
-  = add_row("Series", generate_value_links(display_marc_field(marc, 'series'), :series_title))
-  = add_row("Subjects", generate_value_links_subject(display_marc_field(marc, 'subject_LC')))
+  = add_marc_row("Series", display_marc_field(marc, 'series'), :series_title)
+  = add_row("Subjects", display_marc_field(marc, 'subject_LC'))
   = add_row("Medical Subjects", generate_value_links_subject(display_marc_field(marc, 'subject_mesh')))
   = add_row("Subjects (Genre)", generate_value_links_subject(display_marc_field(marc, 'subject_genre')))
-  = add_row("Also Listed Under", generate_value_links(display_marc_field(marc, 'author_other'), :author))
+  = add_marc_row("Also Listed Under", display_marc_field(marc, 'author_other'), :author)
   = add_row("Contents", display_marc_field(marc, 'contents'))
   = add_row("Other Titles", display_marc_field(marc, 'title_other'))
   = add_row("Distinctive Title", display_marc_field(marc, 'title_distinctive'))
