--- a/app/views/_formats/serial/_catalog_show.html.haml
+++ b/app/views/_formats/serial/_catalog_show.html.haml
@@ -32,10 +32,10 @@
   = add_row("Description", display_marc_field(marc, 'description'))
   = add_row("Summary", display_marc_field(marc, 'summary'))
   = add_marc_row("Series", display_marc_field(marc, 'series'), :series_title)
-  = add_row("Subjects", display_marc_field(marc, 'subject_LC'))
+  = add_row("Subjects", generate_value_links_subject(display_marc_field(marc, 'subject_LC')))
   = add_row("Medical Subjects", generate_value_links_subject(display_marc_field(marc, 'subject_mesh')))
   = add_row("Subjects (Genre)", generate_value_links_subject(display_marc_field(marc, 'subject_genre')))
-  = add_marc_row("Also Listed Under", display_marc_field(marc, 'author_other'), :author)
+  = add_row("Also Listed Under", generate_value_links(display_marc_field(marc, 'author_other'), :author))
   = add_row("Contents", display_marc_field(marc, 'contents'))
   = add_row("Other Titles", display_marc_field(marc, 'title_other'))
   = add_row("Distinctive Title", display_marc_field(marc, 'title_distinctive'))
