--- a/app/views/spectrum/summon/_no_results_blurb.haml
+++ b/app/views/spectrum/summon/_no_results_blurb.haml
@@ -1,7 +1,7 @@
 
 = render '/ask_a_librarian'
-
-%h4 No results found for your search
+.result_empty
+  %h4 No results found for your search
 
 
 %h5 Try modifying your search
