--- a/app/views/catalog/_facets.html.haml
+++ b/app/views/catalog/_facets.html.haml
@@ -1,6 +1,8 @@
 
 -# FACETS FOR CATALOG
 
+/ catalog/summon/_facets.html.haml
+
 - unless @document_list.nil? || @document_list.empty?
   #facets.facets.sidenav
 
