--- a/app/views/spectrum/summon/_facets.html.haml
+++ b/app/views/spectrum/summon/_facets.html.haml
@@ -1,6 +1,8 @@
 
 -# FACETS FOR ARTICLES DATASOURCE (SUMMON)
 
+/ spectrum/summon/_facets.html.haml
+
 #facets.facets.sidenav
   -# %h4{:'data-target' => '.summon-facets-collapse', :'data-toggle'=> "collapse"}
   -#   %a.btn.btn-navbar
