minor improvements to eds

--- a/app/views/eds/_previous_next_doc.html.erb
+++ b/app/views/eds/_previous_next_doc.html.erb
@@ -17,6 +17,6 @@
       <%= link_to "Back to Search Results", request.fullpath.split("/" + params[:dbid])[0] + "?" + generate_next_url + "&fromDetail=y" %>
       |
       <% end %>
-      <a href="/articles">New Search</a>
+      <a href="/eds">New Search</a>
   </div>
 	</div>
