--- a/app/views/layouts/quicksearch.html.haml
+++ b/app/views/layouts/quicksearch.html.haml
@@ -24,7 +24,7 @@
             = link_to "CLIO", root_path, :class => "nav_title search_bar_logo"
           #sources
             = clio_sidebar_items.join('').html_safe
-        #main_with_sources{:class => main_span}
+        #main_with_sources{:class => main_span,'data-ga-category' => "#{ga_category_for_results_list}"}
           - unless @show_landing_pages
             = display_search_boxes(@active_source)
       
