move ga attributes upstream for item detail

--- a/app/views/_display/catalog/_show.html.haml
+++ b/app/views/_display/catalog/_show.html.haml
@@ -16,7 +16,7 @@
     %h4= document_heading.listify.join("").html_safe
 
   .row
-    .info.col-sm-6.col-xs-6{'data-ga-category' => "#{ga_category_for_item_detail}"}
+    .info.col-sm-6.col-xs-6
       %span.coins_wrapper
         / COinS
         %span.Z3988{ :title => catalog_to_openurl_ctx_kev(document).html_safe }
