--- a/app/views/_formats/clio/_catalog_show_toolbar.html.haml
+++ b/app/views/_formats/clio/_catalog_show_toolbar.html.haml
@@ -4,7 +4,7 @@
 - clio_id = h(document["clio_id_display"].to_s)
 - id = document.get("id")
 
-%nav#show_toolbar.navbar.navbar-default{'data-ga-category' => "#{ga_category_for_item_detail}"}
+%nav#show_toolbar.navbar.navbar-default{'data-ga-action' => "Toolbar Click"}
 
   .container-fluid
 
