--- a/app/views/spectrum/summon/_advanced_search.html.haml
+++ b/app/views/spectrum/summon/_advanced_search.html.haml
@@ -39,10 +39,7 @@
         %button.btn.advanced_search_button.btn-primary{:name => "commit", :type => "submit", :value => "Search"}
           %span.glyphicon.glyphicon-search.icon-white
           %span.hidden-xs Search
-        =link_to "Basic Search", "#", class: "btn btn-link advanced_search_toggle",
-                                             'data-ga-category' => ga_category_for_results_list,
-                                             'data-ga-action' => "Search Toggle Click",
-                                             'data-ga-label' => "Switch to Basic"
+        =link_to "Basic Search", "#", class: "btn btn-link advanced_search_toggle"
 
       = hidden_field_tag 'form', 'advanced'
       = hidden_field_tag 'source', source || 'articles'
