--- a/app/views/_formats/book/_catalog_show.html.haml
+++ b/app/views/_formats/book/_catalog_show.html.haml
@@ -14,7 +14,7 @@
   = add_row("Manufactured", display_marc_field(marc, 'publish_manufacture'))
   = add_row("Copyright", display_marc_field(marc, 'publish_copyright'))
   = add_row("Description", display_marc_field(marc, 'description'))
-  = add_marc_row("Series", display_marc_field(marc, 'series'), :series_title)
+  = add_row("Series", generate_value_links(display_marc_field(marc, 'series'), :series_title))
   = add_row("Subjects", generate_value_links_subject(display_marc_field(marc, 'subject_LC')))
   = add_row("Medical Subjects", generate_value_links_subject(display_marc_field(marc, 'subject_mesh')))
   = add_row("Subjects (Genre)", generate_value_links_subject(display_marc_field(marc, 'subject_genre')))
