--- a/app/views/_formats/clio/_catalog_show.html.haml
+++ b/app/views/_formats/clio/_catalog_show.html.haml
@@ -14,7 +14,7 @@
   = add_row("Manufactured", display_marc_field(marc, 'publish_manufacture'))
   = add_row("Copyright", display_marc_field(marc, 'publish_copyright'))
   = add_row("Description", display_marc_field(marc, 'description'))
-  = add_marc_row("Series", display_marc_field(marc, 'series'), :series_title)
+  = add_row("Series", generate_value_links(display_marc_field(marc, 'series'), :series_title))
   = add_row("System Details", display_marc_field(marc, 'system_details'))
   = add_row("Constituent Items", display_marc_field(marc, 'constituent_items'))
   = add_row("Subjects", generate_value_links_subject(display_marc_field(marc, 'subject_LC')))
