move ga-data-action up a bit and put 999.999.999.999 for ir in google appliance sad path

--- a/app/views/catalog/_index_toolbar.haml
+++ b/app/views/catalog/_index_toolbar.haml
@@ -5,7 +5,7 @@
 
   .container-fluid
 
-    .navbar-header
+    .navbar-header{'data-ga-action' => 'Search Bar Click'}
       %button.navbar-toggle{type: 'button', data: {toggle: 'collapse', target: '.index-toolbar-collapse'}}
         %span.icon-bar
         %span.icon-bar
