--- a/app/views/_formats/ac/_standard_list_item.html.haml
+++ b/app/views/_formats/ac/_standard_list_item.html.haml
@@ -19,7 +19,7 @@
         - fedora_id = document['id'].listify.first
         -# NEXT-1012 - use handle for item link in AC records
         -# = link_to document.get('title_display'), "http://academiccommons.columbia.edu/catalog/#{fedora_id}"
-        = link_to ac_item_link(document)
+        = link_to document.get('title_display'), document['handle']
 
 
   / main container for doc partial view
@@ -27,7 +27,7 @@
   .details
     = add_row('Author', document['author_display'])
     = add_row('Date', document['pub_date_facet'])
-    = add_row('Identifier', ac_handle_list(document) )
+    = add_row('Identifier', document['handle'].listify.collect { |url| link_to(url, url) })
     = add_row('Subject', document['subject_facet'], :join => ', ')
     = add_row('Type', document['genre_facet'])
     = add_row('Publisher', document['publisher'])
