moving some ga stuff around

--- a/app/views/catalog/_document_list.html.haml
+++ b/app/views/catalog/_document_list.html.haml
@@ -8,6 +8,6 @@ UNUSED
   UNUSED
 UNUSED
 
-#documents{:data => {'ga-action' => 'Search Results Click'} }
+#documents
   = render_documents(@document_list, :action => "catalog")
 
