--- a/app/views/catalog/index.html.haml
+++ b/app/views/catalog/index.html.haml
@@ -27,7 +27,7 @@
       -# Replace this partial call....
       -# = render 'document_list'
       -# ...with the content of the two-line partial.
-      #documents.scroll_memory{:data => {'ga-action' => 'Search Results Click'} }
+      #documents.scroll_memory
         = render_document_list(@document_list, :action => "catalog")
       
 
