--- a/app/views/spectrum/_single.html.haml
+++ b/app/views/spectrum/_single.html.haml
@@ -23,7 +23,7 @@
       - else
         = render partial: '/spectrum/single/index_toolbar', locals: {result: result}
       
-        #documents{:data => {'ga-action' => 'Search Results Click'} }
+        #documents
           = render partial: "/spectrum/single/result_docs", locals: {result: result, render_opts: search_render_options(search, source), row_opts: search['row_opts']}
         = render partial: '/spectrum/single/index_toolbar', locals: {result: result}
       
