NEXT-1154 - Footer, first draft

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -61,6 +61,7 @@ $dropdown-link-hover-bg: #08c
 @import "header"
 @import "item_alerts"
 @import "libraryh3lp"
+@import "library_web_footer"
 @import "redesign"
 @import "search"
 @import "saved_lists"
