--- a/app/assets/stylesheets/clio_last.css.scss
+++ b/app/assets/stylesheets/clio_last.css.scss
@@ -24,10 +24,15 @@ body.blank_layout {
 
 #outer-container {
   margin-left: 10px;
-  margin-right: 20px;
+  /* not sure why I had this so big?*/
+  /*  margin-right: 20px;*/
+  margin-right: 15px;
   border: 1px solid #aaa;
   padding-top: 0px;
-  padding-bottom: 50px;
+  padding-bottom: 10px;
+  /* Override bootstrap's L/R 15px padding for any .container*/
+  padding-left: 10px;
+  padding-right: 10px;
   background-color: rgba(255, 255, 255, 0.85098);
 }
 
