--- a/app/views/_footer.html.haml
+++ b/app/views/_footer.html.haml
@@ -1,3 +1,9 @@
+
+-# NEXT-1154 - Footer
+-#  "the same footer as is in use for the web site"
+= render :partial => "/library_web_footer"
+
+
 / footer partial begin
 #ft
   = @footer
@@ -8,4 +14,5 @@
   / div.clear-both end
 
 / footer partial end
+
 
