--- a/app/views/_search/_search_box.html.haml
+++ b/app/views/_search/_search_box.html.haml
@@ -1,5 +1,5 @@
 
-.landing_across.row{'data-ga-action' => 'Search Bar Click'}
+.landing_across.row
   .col-sm-12
     .search_boxes.pull-left
       .basic_search
