--- a/app/views/catalog/_per_page_widget.haml
+++ b/app/views/catalog/_per_page_widget.haml
@@ -7,7 +7,7 @@
     Display Options
     %b.caret
 
-  %ul.dropdown-menu{'data-ga-action' => "Display Options"}
+  %ul.dropdown-menu
     -blacklight_config.per_page.each do |per_page|
       %li= catalog_per_page_link(per_page)
 
