--- a/app/views/catalog/_sort_widget.html.erb
+++ b/app/views/catalog/_sort_widget.html.erb
@@ -4,7 +4,7 @@
 
   <a href="#" class="dropdown-toggle" data-toggle="dropdown"><%= "Sort by #{current_sort_field.label}" %><b class="caret"></b></a>
 
-  <ul class="dropdown-menu" , data-ga-action = "Sort by" >
+  <ul class="dropdown-menu">
 
   <%- blacklight_config.sort_fields.each do |sort_key, field| %>
     <li><%= link_to(field.label, url_for(params_for_search.merge(:sort => sort_key))) %></li>
