add class to dropdown items so ga will not skip them if they are internal links

--- a/app/views/top_nav/_help_menu.html.haml
+++ b/app/views/top_nav/_help_menu.html.haml
@@ -6,18 +6,18 @@
     %b.caret
   %ul.dropdown-menu.menu-dropdown
     %li
-      %a{:href => "http://www.columbia.edu/cgi-bin/cul/resolve?lweb0031", :target => "_blank"} Ask a Librarian
+      %a.dropdown-link{:href => "http://www.columbia.edu/cgi-bin/cul/resolve?lweb0031", :target => "_blank"} Ask a Librarian
     %li
-      %a{href: 'https://blogs.cul.columbia.edu/clio/guides/'} CLIO Help
+      %a.dropdown-link{href: 'https://blogs.cul.columbia.edu/clio/guides/'} CLIO Help
     %li
-      %a{href: 'http://library.columbia.edu/content/libraryweb/help/faq.html'} FAQ
+      %a.dropdown-link{href: 'http://library.columbia.edu/content/libraryweb/help/faq.html'} FAQ
     %li
-      %a{href: 'http://library.columbia.edu/content/libraryweb/help/using-this-site.html'} Website Help
+      %a.dropdown-link{href: 'http://library.columbia.edu/content/libraryweb/help/using-this-site.html'} Website Help
     %li
-      %a{href: 'http://library.columbia.edu/content/libraryweb/research/help.html'} Research Help
+      %a.dropdown-link{href: 'http://library.columbia.edu/content/libraryweb/research/help.html'} Research Help
     %li
-      %a{href: 'http://www.columbia.edu/cgi-bin/cul/resolve?lweb0006'} Report E-Resource Problems
+      %a.dropdown-link{href: 'http://www.columbia.edu/cgi-bin/cul/resolve?lweb0006'} Report E-Resource Problems
     %li
-      %a{href: 'http://www.columbia.edu/cgi-bin/cul/resolve?lweb0004'} Recommend a title for purchase
+      %a.dropdown-link{href: 'http://www.columbia.edu/cgi-bin/cul/resolve?lweb0004'} Recommend a title for purchase
     %li
-      %a{href: '#', class: 'feedback-popup'} Suggestions &amp; Feedback
+      %a.dropdown-link{href: '#', class: 'feedback-popup'} Suggestions &amp; Feedback
