--- a/app/views/_formats/clio/_catalog_show_toolbar.html.haml
+++ b/app/views/_formats/clio/_catalog_show_toolbar.html.haml
@@ -49,70 +49,70 @@
 
 
     #show-toolbar-collapse.collapse.navbar-collapse
-  
+
       %ul.nav.navbar-nav
-        %li=link_to "Print", "javascript:print()"
-        %li=link_to "Email", email_catalog_path(:id => id), {:id => "emailLink", :name => "email", :class => "lightboxLink"}
+        %li=link_to "Print", "javascript:print()", class: 'dropdown-link'
+        %li=link_to "Email", email_catalog_path(:id => id), {:id => "emailLink", :name => "email", :class => "lightboxLink dropdown-link"}
         / %li=link_to "SMS-BLACKLIGHT", sms_catalog_path(:id => id), {:id => "smsLink", :name => "sms", :class => "lightboxLink"}
-  
-        %li=link_to "Send to Phone", "#", :onclick => "OpenTextMessage(#{id}); return false;"
-  
+
+        %li=link_to "Send to Phone", "#", :onclick => "OpenTextMessage(#{id}); return false;", class: 'dropdown-link'
+
         -# %li=link_to "Save to #{SavedList::DEFAULT_LIST_NAME}", "/lists/add/#{id}"
         -# %li= link_to "Save to #{SavedList::DEFAULT_LIST_NAME}", "#", :onclick => "saveBibToNamedList(#{id}, '#{SavedList::DEFAULT_LIST_NAME}'); return false;"
         -# AJAXY 
         -# %li= link_to "Add to My Saved List", "#", :onclick => "saveBibToNamedList(#{id}, '#{SavedList::DEFAULT_LIST_NAME}'); return false;"
         -# Non-AJAXy, class will attach JS onclick to redirect to /list/add...
-        %li= link_to "Add to My Saved List", "#", class: 'saved_list_add', data: {identifier: id}
-        
-  
+        %li= link_to "Add to My Saved List", "#", class: 'saved_list_add', data: {identifier: id}, class: 'dropdown-link'
+
+
         %li.dropdown
-          =link_to "Export <span class='caret'></span>".html_safe, "#", :class => "dropdown-toggle", :"data-toggle" => "dropdown"
+          =link_to "Export <span class='caret'></span>".html_safe, "#", :class => "dropdown-toggle", :"data-toggle" => "dropdown", class: 'dropdown-link'
           %ul.dropdown-menu
             - any_cites = false
-  
+
             /- if @document.export_formats.keys.include?(:refworks_marc_txt)
             /  -any_cites = true
             /  %li=link_to "Export to RefWorks", refworks_export_url(@document)
             - if document.export_formats.keys.include?(:endnote)
               -any_cites = true
-              %li=link_to "Export to EndNote", catalog_path(id, :format => "endnote")
-  
+              %li=link_to "Export to EndNote", catalog_path(id, :format => "endnote"), class: 'dropdown-link'
+
             - unless any_cites
-              %li=link_to "No citations available", "#"
-  
+              %li=link_to "No citations available", "#", class: 'dropdown-link'
+
         %li.dropdown
-          =link_to "Display In <span class='caret'></span>".html_safe, "#", :class => "dropdown-toggle", :"data-toggle" => "dropdown"
+          =link_to "Display In <span class='caret'></span>".html_safe, "#", :class => "dropdown-toggle", :"data-toggle" => "dropdown", class: 'dropdown-link'
           %ul.dropdown-menu
             - if clio_id
-              %li= link_to "Display in CLIO Legacy", "http://clio.cul.columbia.edu:7018/vwebv/holdingsInfo?bibId=#{clio_id}"
-  
+              %li= link_to "Display in CLIO Legacy", "http://clio.cul.columbia.edu:7018/vwebv/holdingsInfo?bibId=#{clio_id}", class: 'dropdown-link'
+
             - if @document.respond_to?(:to_marc)
-              %li= link_to "MARC View", librarian_view_catalog_path(id), {:id => "librarianLink", :name => "librarian_view" }
-  
+              %li= link_to "MARC View", librarian_view_catalog_path(id), {:id => "librarianLink", :name => "librarian_view", class: 'dropdown-link' }
+
         %li.dropdown
           =link_to "Requests <span class='caret'></span>".html_safe, "#", :class => "dropdown-toggle", :"data-toggle" => "dropdown"
           %ul.dropdown-menu
-            %li= link_to "Place a Recall / Hold", "http://clio.cul.columbia.edu:7018/vwebv/patronRequests?sk=patron&bibId=#{clio_id}", :target => "_blank"
-            %li= link_to "Borrow Direct", "http://www.columbia.edu/cgi-bin/cul/borrowdirect?#{clio_id}", :target => "_blank"
-            %li= link_to "ILL", "https://www1.columbia.edu/sec-cgi-bin/cul/forms/illiad?#{clio_id}", :target => "_blank"
-            %li= link_to "Scan & Deliver", "https://www1.columbia.edu/sec-cgi-bin/cul/forms/docdel?#{clio_id}", :target => "_blank"
-            %li= link_to "Inter-Campus Delivery", "http://www.columbia.edu/cgi-bin/cul/resolve?lweb0013", :target => "_blank"
-            %li= link_to "In-Process / On Order", "#", :onclick => "OpenInprocessRequest(#{clio_id}); return false;"
-            %li= link_to "Precataloging", "#", :onclick => "OpenPrecatRequest(#{clio_id}); return false;"
-  
+            %li= link_to "Place a Recall / Hold", "http://clio.cul.columbia.edu:7018/vwebv/patronRequests?sk=patron&bibId=#{clio_id}", :target => "_blank", class: 'dropdown-link'
+            %li= link_to "Borrow Direct", "http://www.columbia.edu/cgi-bin/cul/borrowdirect?#{clio_id}", :target => "_blank", class: 'dropdown-link'
+            %li= link_to "ILL", "https://www1.columbia.edu/sec-cgi-bin/cul/forms/illiad?#{clio_id}", :target => "_blank", class: 'dropdown-link'
+            %li= link_to "Scan & Deliver", "https://www1.columbia.edu/sec-cgi-bin/cul/forms/docdel?#{clio_id}", :target => "_blank", class: 'dropdown-link'
+            %li= link_to "Inter-Campus Delivery", "http://www.columbia.edu/cgi-bin/cul/resolve?lweb0013", :target => "_blank", class: 'dropdown-link'
+            %li= link_to "In-Process / On Order", "#", :onclick => "OpenInprocessRequest(#{clio_id}); return false;", class: 'dropdown-link'
+            %li= link_to "Precataloging", "#", :onclick => "OpenPrecatRequest(#{clio_id}); return false;", class: 'dropdown-link'
+
             -# NewRelic shows that calling this CGI script is taking 4% of total server cpu.
             -# Just show this for everyone.
             -# if HTTPClient.new.get_content("http://www.columbia.edu/cgi-bin/cul/lookupNBX?" + clio_id) == "1"
-            %li= link_to "Off-site request", "http://www.columbia.edu/cgi-bin/cul/offsite2?#{clio_id}", :target => "_blank"
-  
-            %li= link_to "Item Not On Shelf?", "#", :onclick => "OpenSearchRequest(#{clio_id}); return false;"
-  
+            %li= link_to "Off-site request", "http://www.columbia.edu/cgi-bin/cul/offsite2?#{clio_id}", :target => "_blank", class: 'dropdown-link'
+
+            %li= link_to "Item Not On Shelf?", "#", :onclick => "OpenSearchRequest(#{clio_id}); return false;", class: 'dropdown-link'
+
 
         -# %ul.nav.navbar-nav.navbar-right
         .navbar-text
           .start_over
-            = link_to "Start Over", catalog_index_path
-    
+            = link_to "Start Over", catalog_index_path, class: 'dropdown-link'
+
 
 
 
