switch from Databases to Content Providers, etc.

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -62,8 +62,9 @@ $dropdown-link-hover-bg: #08c
 @import "item_alerts"
 @import "libraryh3lp"
 @import "redesign"
-@import "search"
 @import "saved_lists"
+@import "scoped_search"
+@import "search"
 
 // Restore the Bootstrap 2 default styling - gradient buttons, etc.
 // Not Needed - the gem provides this too.  @import "bootstrap-theme.min"
