--- a/app/assets/stylesheets/content_providers.css.scss
+++ b/app/assets/stylesheets/content_providers.css.scss
@@ -1,3 +1,3 @@
-// Place all the styles related to the ScopeDatabases controller here.
+// Place all the styles related to the ContentProviders controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
