--- a/app/views/catalog/_selections_widget.html.haml
+++ b/app/views/catalog/_selections_widget.html.haml
@@ -30,8 +30,8 @@
       Items...
     %b.caret
 
-  %ul.dropdown-menu{'data-ga-action' => "Selected Items"}
-    %li= link_to "Send to Email", email_path(), {:id => "emailLink", :name => "email", :class => "lightboxLink", :onclick => "return appendSelectedToURL(this);"}
+  %ul.dropdown-menu{'data-ga-action' => "Selected Items Toolbar Click"}
+    %li= link_to "Send to Email", email_path(), {:id => "emailLink", :name => "email", :class => "lightboxLink dropdown-link", :onclick => "return appendSelectedToURL(this);"}
     %li= link_to "Export to EndNote", endnote_catalog_path(:format => 'endnote'), {:id => "endnoteLink", :onclick => "return appendSelectedToURL(this);"}
 
     -# %li.nav-divider
