working on fielded EDS searching...

--- a/app/views/content_providers/index.html.haml
+++ b/app/views/content_providers/index.html.haml
@@ -1,8 +1,6 @@
 
-- title = "EDS Content Providers"
-- @page_title = title
-
-%h2= title
+-# used in the layout, for html page header and H2 text
+- @page_title = "EDS Content Providers"
 
 
 %table
