--- a/app/views/quick_set/index.html.haml
+++ b/app/views/quick_set/index.html.haml
@@ -1,7 +1,5 @@
-- title = "Quick Set Management"
-- @page_title = title
-
-%h2= title
+-# used in the layout, for html page header and H2 text
+- @page_title = "Quick Set Management"
 
 
 %table
