--- a/app/views/quick_set/results.html.haml
+++ b/app/views/quick_set/results.html.haml
@@ -1,8 +1,5 @@
-- title = "Quick Set - Search Results"
-- @page_title = title
-
-%h2= title
-
+-# used in the layout, for html page header and H2 text
+- @page_title = "Quick Set - Search Results"
 
 - eds_connect
 - options = generate_api_query(params)
