move crown slightly to the left

--- a/app/assets/stylesheets/donor_info_icon.css.scss
+++ b/app/assets/stylesheets/donor_info_icon.css.scss
@@ -7,7 +7,7 @@
   background-color: #779bc3;
   border-radius: 1;
   border: 1px solid #779bc3;
-  background-position: 0;
+  background-position: 2px;
   color: white;
   font-size: 104%;
   font-style: normal;
