remove more of the zero-hits search changes

--- a/app/views/spectrum/single/_no_results_blurb.haml
+++ b/app/views/spectrum/single/_no_results_blurb.haml
@@ -1,8 +1,7 @@
 
 = render '/ask_a_librarian'
 
-.result_empty
-  %h4 No results 1 found for your search
+%h4 No results found for your search
 
 
 %h5 Try modifying your search
