Advanced Scoped Search (multi-field), lots of misc. EDS work

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -57,6 +57,7 @@ $dropdown-link-hover-bg: #08c
 @import "datepicker"
 @import "datasources"
 @import "debug"
+@import "eds"
 @import "facets"
 @import "header"
 @import "item_alerts"
