--- a/app/views/eds/_constraints.html.haml
+++ b/app/views/eds/_constraints.html.haml
@@ -1,18 +1,31 @@
 
-
 -# EDS - CONSTRAINTS DISPLAY
+
+-# Three parts of contraints:
+-# - search terms
+-# - limiters
+-# - facets
 
 .well.well-constraints
   %span.constraints-label You searched for:
 
-  - result.constraints_with_links.each do |text, link|
+  -# This was what summon's constraint box did
+  -# - result.constraints_with_links.each do |text, link|
+  -# 
+  -#   .constraint-box
+  -#     %span.filterValue
+  -#       =text
+  -#       =link_to content_tag(:span, '', :class => 'glyphicon glyphicon-remove'), link
+  -#     %span.chrome-fix
 
-    .constraint-box
-      %span.filterValue
-        =text
-        =link_to content_tag(:span, '', :class => 'glyphicon glyphicon-remove'), link
-      %span.chrome-fix
+  - if query_has_search_terms?
+    = render 'applied_search_terms'
 
+  - if query_has_limiters?
+    = render 'applied_limiters'
+
+  - if query_has_facetfilters?
+    = render 'applied_facets'
 
 -# OLD CODE - EDS ERB
 -# 
