--- a/app/views/eds/_facet_facets.html.haml
+++ b/app/views/eds/_facet_facets.html.haml
@@ -39,6 +39,6 @@
                     %a.facet_select{href: request.fullpath.split("?")[0] + "?" + generate_next_url + "&eds_action=" + CGI.escape(facetValue['AddAction'].to_s)}
                       = facetValue['Value'].to_s.titleize
 
-                  %span.facet-count #{facetValue['Count']}
+                  %span.facet-count #{number_with_delimiter(facetValue['Count'])}
 
 
