--- a/app/views/eds/_results_pagination.html.erb
+++ b/app/views/eds/_results_pagination.html.erb
@@ -1,4 +1,5 @@
-<% if show_total_pages > 1 %>
+
+<% if query_has_results? && show_total_pages > 1 %>
  <div class="row record-padding">
   <div class="col-md-9"> 
     <div class="pagination">
