--- a/app/views/eds/_sort_and_per_page.html.erb
+++ b/app/views/eds/_sort_and_per_page.html.erb
@@ -1,4 +1,7 @@
-<% if session[:results]['SearchResult']['Data']['Records'].present? %>
+
+
+<% # if session[:results]['SearchResult']['Data']['Records'].present? %>
+<% if query_has_results? %>
 <div id="sortAndPerPage" class="clearfix">
    <div class="page_links">
      <%= render :partial => "paginate_compact" %>
