--- a/app/views/quick_set/advanced.html.haml
+++ b/app/views/quick_set/advanced.html.haml
@@ -7,10 +7,11 @@
   = form_tag scoped_search_path, method: 'GET', class: 'form-inline' do
 
     .row.well
-      .col-sm-10
+      .col-sm-8
         .input-group
           = text_field_tag(:q, '', {size: '60', class: 'form-control'})
           = eds_fielded_dropdown(:search_field)
+          -# = submit_tag("Search", {class: 'form-control'})
         %br
         .input-group
           = text_field_tag(:q2, '', {size: '60', class: 'form-control'})
@@ -20,14 +21,14 @@
           = text_field_tag(:q3, '', {size: '60', class: 'form-control'})
           = eds_fielded_dropdown(:search_field3)
 
+      .col-sm-2
+        %button.btn.advanced_search_button.btn-primary{:name => "commit", :type => "submit", :value => "Search"}
+          %span.glyphicon.glyphicon-search.icon-white
+          %span.hidden-xs Search
 
       .col-sm-2
-        = link_to "Advanced Search", scoped_advanced_path
+        = link_to "Simple Search", scoped_simple_path
 
 
     = render 'quickset_pick_panel', quicksets: @quicksets
-
-    .row.well
-      .col-sm-12
-        = submit_tag("Search")
 
