--- a/app/views/eds/detail.html.erb
+++ b/app/views/eds/detail.html.erb
@@ -4,8 +4,9 @@
 <% eds_connect %>
 <%
   recordArray = retrieve(params[:dbid].to_s,params[:an].to_s,termsToHighlight(params[:highlight]))
-  clean_params = deep_clean(params)
-  params = clean_params
+  # maybe not necessary?
+  # clean_params = deep_clean(params)
+  # params = clean_params
 %>
 <% unless session[:results].present? %>
  <% if session[:apiquery].present? %>
